--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Porten | Hight quality clock online store</title>
- 
+
+<link rel="shortcut icon" href="img/logo/PORTEN.svg">
+
+  <meta property="og:title" content="Стильные мужские часы на любой вкус.">
+  <meta property="og:image" content="img/NewCollection_bg.jpg">
+  <meta name="description"
+    content="Стильные мужские часы Porten в Санкт-петербурге.">
+
   <link rel="stylesheet" href="css/header.css">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/media.css">
@@ -82,20 +89,20 @@
       <div class="new-collection__catalog catalog">
         <h2 class="catalog__title title"><span>Сезон</span> 2020/21</h2>
         <div class="catalog__items catalog-list">
-          <div class="catalog-list__item card">
+          <a class="catalog-list__item card" href="#">
             <div class="card__img">
               <img src="img/clock.png" alt="">
             </div>
             <p class="card__title">Louis XVI ATHOS</p>
             <p class="card__price">165 000 руб.</p>
-          </div>
-          <div class="catalog-list__item card">
+          </a>
+          <a class="catalog-list__item card" href="#">
             <div class="card__img">
               <img src="img/clock.png" alt="">
             </div>
             <p class="card__title">Louis XVI ATHOS</p>
             <p class="card__price">165 000 руб.</p>
-          </div>
+          </a>
           <div class="catalog-list__item card">
             <div class="card__img">
               <img src="img/clock.png" alt="">
